added question and styled the last page

--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
             </div>
         </div>
 
-        <div class="hide" id="endscreen">
-            <h2>Finished</h2>
-            <p>Your final score is: <span id="finalscore"></span></p>
-            <p>
-                Enter Initials: <input type="text" id="initials" />
-                <button id="submit">Save highscore</button>
-            </p>
+        <div class="jumbotron jumbotron-fluid hide" id="endscreen">
+            <div class="container">
+                <h1 class="display-4">Finished</h1>
+                <p class="lead">Your final score is: <span id="finalscore"></span></p>
+                <p>
+                    Enter Initials: <input type="text" id="initials" />
+                    <button id="submit">Save highscore</button>
+                </p>
+            </div>
         </div>
 
     </main>
