--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="scores navbar navbar-dark bg-dark">
         <ul class="nav nav-pills">
             <li class="nav-item">
-                <a class="nav-link active" href="highscores.html">Highscores</a>
+                <a class="nav-link active" href="highscore.html">Highscores</a>
             </li>
         </ul>
         <a class="navbar-brand timer">Time: <span id="time">0</span></a>
@@ -61,9 +61,6 @@
 
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/questions.js"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
